k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: server-deployment
  labels:
    app: api-server

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-server
    template:
      metadata:
        labels:
          app: api-server
      spec:
        containers:
          - name: api-server
            image: api-server:v1 
            ports:
               - containerPort:8000
