k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-server-service
  labels:
    app: api-server

spec:
  type: LoadBalancer
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
